# icscards-parser

./: README.md  icscards-pdf-to-csv.py  pyproject.toml
